Sets hero image to take up full width of page. This fixes an issue where the hero image wold be cut off at various resolutions.

--- a/src/styles/hero.module.css
+++ b/src/styles/hero.module.css
@@ -12,6 +12,16 @@
   background: linear-gradient(90deg, #000000 20.29%, rgba(0, 0, 0, 0) 100%), linear-gradient(360deg, #000000 13.96%, rgba(0, 0, 0, 0) 107.34%);
 }
 
+.hero-container img {
+  position: absolute;
+  top: 0;
+  bottom: auto;
+  left: 0;
+  right: auto;
+  width: 100%;
+  height: 100%;
+}
+
 .hero-tagline-container {
   position: relative;
   z-index: 40;
